# swaggerdoc/swagger.json
@@ -5,14 +5,13 @@
     "description": "Web service for tonerhaven api",
     "version": "1.0.0"
   },
-  "host": "localhost:3001",
+  "host": "127.0.0.1:3001",
   "basePath": "/",
   "schemes": [
-    "https",
     "http"
   ],
   "paths": {
-    "/api/brands/all-brands": {
+    "/api/brands/": {
       "get": {
         "description": "",
         "responses": {
